--- a/www/views/innsbruck-content/innsbruck-rankings/innsbruck-rankings.scss
+++ b/www/views/innsbruck-content/innsbruck-rankings/innsbruck-rankings.scss
@@ -173,6 +173,25 @@ innsbruck-rankings,
     }
 }
 
+@media(max-width: 600px) {
+    innsbruck-rankings,
+    .innsbruck-rankings {
+        >.container {
+            >.row {
+                >.col {
+                    >.container {
+                        >.row {
+                            >.col:nth-child(3) {
+                                flex: unset;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media(min-width: 600px) {
     innsbruck-rankings {
         >.container {
